--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "electron-store": "^8.0.1",
     "fs-extra": "^10.0.0",
+    "gifsicle": "^5.3.0",
     "junk": "3.1.0",
     "mime-types": "^2.1.34",
     "mozjpeg": "^7.0.0",
