--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vite": "^2.6.10"
   },
   "dependencies": {
+    "canvas-confetti": "^1.4.0",
     "electron-store": "^8.0.1",
     "fs-extra": "^10.0.0",
     "gifsicle": "^5.3.0",
