--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-optimization",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Electron & Vue 3 application",
   "main": "src/main/index.js",
   "scripts": {
@@ -48,6 +48,7 @@
     "vite": "^2.6.10"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "canvas-confetti": "^1.4.0",
     "electron-store": "^8.0.1",
     "fs-extra": "^10.0.0",
