chore(lint-staged): remove extra `git add` command
see: https://github.com/okonet/lint-staged#v10

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "lint-staged": {
     "*.{js,vue}": [
       "prettier --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "devDependencies": {
