--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-optimization",
+  "name": "image-optimizer",
   "version": "1.3.0",
   "description": "A tool for optimizing images and vector graphics",
   "main": "build/src/main/index.js",
