--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "canvas-confetti": "^1.4.0",
+    "cwebp-bin": "^8.0.0",
     "electron-store": "^8.0.1",
     "fs-extra": "^10.0.0",
     "gifsicle": "5.3.0",
