--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,11 @@
 name: Build Multi-Platform Electron Release
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on new tag pushed
   push:
-    branches: [ master ]
+    tags:
+      - '*'
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
