ci: update release action build config

--- a/package.json
+++ b/package.json
@@ -93,8 +93,14 @@
     },
     "mac": {
       "target": [
-        { "target": "dmg", "arch": "arm64" },
-        { "target": "dmg", "arch": "x64" }
+        {
+          "target": "dmg",
+          "arch": "arm64"
+        },
+        {
+          "target": "dmg",
+          "arch": "x64"
+        }
       ]
     },
     "win": {
@@ -108,21 +114,49 @@
       "shortcutName": "Image Optimizer"
     },
     "linux": {
+      "category": "Utility",
       "desktop": {
         "StartupNotify": "false",
         "Encoding": "UTF-8",
         "MimeType": "x-scheme-handler/deeplink"
       },
-      "target": ["AppImage", "rpm", "deb"]
+      "maintainer": "Anton Reshetov",
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        },
+        {
+          "target": "snap",
+          "arch": [
+            "x64"
+          ]
+        }
+      ]
     },
     "extraMetadata": {
       "main": "src/main/index.js"
     },
     "fileAssociations": [
-      { "name": "JPG", "ext": "jpg" },
-      { "name": "PNG", "ext": "png" },
-      { "name": "GIF", "ext": "gif" },
-      { "name": "SVG", "ext": "svg" }
+      {
+        "name": "JPG",
+        "ext": "jpg"
+      },
+      {
+        "name": "PNG",
+        "ext": "png"
+      },
+      {
+        "name": "GIF",
+        "ext": "gif"
+      },
+      {
+        "name": "SVG",
+        "ext": "svg"
+      }
     ],
     "files": [
       "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
@@ -133,7 +167,10 @@
       {
         "from": "build/src",
         "to": "src",
-        "filter": ["main/**/*.js", "renderer/**/*"]
+        "filter": [
+          "main/**/*.js",
+          "renderer/**/*"
+        ]
       }
     ]
   }
