chore: add additional debug logging

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "tsc-watch -p tsconfig.electron.json --onSuccess 'npm run dev:server'",
     "dev:server": "node build/src/scripts/dev-server.js",
-    "build": "npm run build:ci && node build/src/scripts/build-vue.js ",
-    "build:ci": "npm run build:ci:renderer",
+    "build": "npm run build:ci",
+    "build:ci": "npm run build:ci:renderer && node build/src/scripts/build-vue.js",
     "build:ci:renderer": "tsc -p tsconfig.vue.json",
     "build:local": "npm run build:local:electron && node build/src/scripts/build.js ",
     "build:local:electron": "tsc -p tsconfig.electron.json",
