ci: gh actions build fixes

--- a/tsconfig.vue.json
+++ b/tsconfig.vue.json
@@ -12,16 +12,26 @@
     "lib": ["ESNext", "DOM"],
     "outDir": "./build",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*", "./src/renderer/*"]
     },
+    "types": [
+      "unplugin-icons/types/vue",
+    ]
   },
   "include": [
     "src/config/*.ts",
     // Only build Vue, this config file is used by GitHub Actions
     // Собираем Vue, этот конфигурационный файл используется в GitHub Actions
     "src/scripts/build-vue.ts",
+    "src/scripts/build-frontend.ts",
+    "src/config/*.ts",
+    "src/scripts/*.ts",
     "src/main/**/*.ts",
-    "src/main/types"
+    "src/main/types",
+    "src/renderer/**/*.ts",
+    "src/renderer/**/*.d.ts",
+    "src/renderer/**/*.tsx",
+    "src/renderer/**/*.vue"
   ],
   "exclude":[
     "./node_modules",
