--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "prepare": "husky install"
   },
-  "repository": "https://github.com/antonreshetov/image-optimizer",
+  "repository": "https://github.com/christopher-hayes/image-optimizer",
   "author": {
-    "name": "Anton Reshetov",
-    "url": "https://github.com/antonreshetov"
+    "name": "Chris Hayes",
+    "url": "https://github.com/christopher-hayes"
   },
   "lint-staged": {
     "*.{js,ts,vue}": [
