ci: weird dmg-license macos build error
testing a config change as well as rebuilding lock files to see if it fixes it

--- a/package.json
+++ b/package.json
@@ -93,12 +93,7 @@
       "output": "./dist"
     },
     "mac": {
-      "target": [
-        {
-          "target": "dmg",
-          "arch": "x64"
-        }
-      ]
+      "target": "dmg"
     },
     "win": {
       "target": "nsis"
